<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_pelelang"
        android:icon="@drawable/beranda"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_lelang_pelelang"
        android:icon="@drawable/lelang"
        android:title="@string/title_lelang" />

    <item
        android:id="@+id/navigation_riwayat_pelelang"
        android:icon="@drawable/riwayat"
        android:title="@string/title_riwayat" />
    <item
        android:id="@+id/navigation_riwayat_penawaran"
        android:icon="@drawable/ic_date"
        android:title="@string/title_penawaran"/>

    <item
        android:id="@+id/navigation_akun_pelelang"
        android:icon="@drawable/account"
        android:title="@string/title_akun" />

</menu>