<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_nav_pelelang"
    app:startDestination="@+id/navigation_home_pelelang">

    <fragment
        android:id="@+id/navigation_home_pelelang"
        android:name="com.example.myapplication.pelelang.fragmentui.home.HomePelelangFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_pelelang" />

    <fragment
        android:id="@+id/navigation_lelang_pelelang"
        android:name="com.example.myapplication.pelelang.fragmentui.lelang.LelangPelelangFragment"
        android:label="@string/title_lelang"
        tools:layout="@layout/fragment_lelang_pelelang" />

    <fragment
        android:id="@+id/navigation_riwayat_pelelang"
        android:name="com.example.myapplication.pelelang.fragmentui.riwayat.RiwayatPelelangFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_riwayat_pelelang" />

    <fragment
        android:id="@+id/navigation_riwayat_penawaran"
        android:name="com.example.myapplication.pelelang.fragmentui.riwayat.RiwayatPenawaranFragment"
        android:label="@string/title_penawaran"
        tools:layout="@layout/fragment_penawaran_pelelang"/>

    <fragment
        android:id="@+id/navigation_akun_pelelang"
        android:name="com.example.myapplication.pelelang.fragmentui.akun.AkunPelelangFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun_pelelang" />
</navigation>