<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.peserta.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lelang"
        android:name="com.example.myapplication.peserta.fragment.LelangFragment"
        android:label="@string/title_lelang"
        tools:layout="@layout/fragment_lelang" />

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.example.myapplication.peserta.fragment.RiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.example.myapplication.peserta.fragment.RiwayatFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun" />
</navigation>